@@ -1,3 +1,8 @@
+2012-05-16  Vladimir Volovich  <vvv@vsu.ru>
+
+	* synctex_parser.c (SYNCTEX_DECLARE_CHARINDEX): Bug fix, avoid
+	isolated semicolon.
+
 2012-02-03  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* synctex_parser.c: Change struct __synctex_updater_t member
